Optimize collect pattern renderer to use modern Java 16+ .toList() for Java 21 project (#529)